# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://pypi.org/classifiers/
# https://www.python.org/dev/peps/pep-0508/

[metadata]
name = watchit-toolkit
version = 0.2.0
author = ZorrillosDev
author-email = noreply@zorrillosdev.com
summary = Watchit toolkit for watchit environment
description-file = README.md
home-page = https://github.com/ZorrillosDev/watchit-toolkit
requires-dist = setuptools
classifier =
    Natural Language:: English
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Video :: Conversion


[options]
packages = find:
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    tox

[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel

[options.packages.find]
exclude = tests
where  = src.core

[aliases]
test=pytest

